[project]
name = "miscellaneosu"
version = "0.1.0"
description = "4sight signal: data cleaning and forecasting-power analysis."
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "ipykernel>=7.3.0",
    "marimo>=0.23.9",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]
